# dwsh

./: Cargo.toml  PLAN.md  flake.nix
dwsh/: Cargo.toml
dwsh/src/: app.rs  lib.rs  main.rs
dwsh/src/quickcontrol/: bar.rs  status.rs
logout/: Cargo.toml
logout/src/: app.rs  main.rs
utils/: Cargo.toml
utils/src/: base16.rs  lib.rs
utils/test/: test.toml
