[package]
name = "dwsh"
description = "Main interface for dwsh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
relm4.workspace = true
gtk4-layer-shell.workspace = true
gtk4.workspace = true

battery.workspace = true
chrono.workspace = true
